@@ -1,3 +1,7 @@
+2007-07-06  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* Added some non standard flags to the maildir support
+
 2007-07-05  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Fixes for the new headers after a transfer of messages happened
